; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_update_window_title.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_update_window_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo_wayland_state = type { i32 }

@VO_NOTAVAIL = common dso_local global i32 0, align 4
@VO_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vo_wayland_state*, i8*)* @update_window_title to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_window_title(%struct.vo_wayland_state* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vo_wayland_state*, align 8
  %5 = alloca i8*, align 8
  store %struct.vo_wayland_state* %0, %struct.vo_wayland_state** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %4, align 8
  %7 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @VO_NOTAVAIL, align 4
  store i32 %11, i32* %3, align 4
  br label %19

12:                                               ; preds = %2
  %13 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %4, align 8
  %14 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @xdg_toplevel_set_title(i32 %15, i8* %16)
  %18 = load i32, i32* @VO_TRUE, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %12, %10
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @xdg_toplevel_set_title(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
